--- a/PI-Countries-main/client/src/Components/CountriesCards/CountriesCards.module.css
+++ b/PI-Countries-main/client/src/Components/CountriesCards/CountriesCards.module.css
@@ -17,3 +17,14 @@
     display: flex;
     height: 200px;
 }
+
+.divSelect {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+
+.select {
+    margin: 1em;
+}
