--- a/PI-Countries-main/client/src/Components/CountryCard/CountryCard.module.css
+++ b/PI-Countries-main/client/src/Components/CountryCard/CountryCard.module.css
@@ -4,15 +4,31 @@
         align-items: center;
         justify-content: space-between;
         width: 250px;
-        height: 460px;
+        height: 350px;
         border: 2px solid gray;
         border-radius: 5px;
         margin: 1rem;
         padding: 0.5rem;
         box-sizing: border-box;
+        background-color:rgba(143, 182, 169, 0.733);
+        text-decoration: none;
+        border-bottom: none;
+}
+
+.link {
+    text-decoration: none;
 }
 
 .img {
     width: 100%;
     border-radius: 5px;
+}
+
+.fontHome {
+    color: beige;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    text-decoration: none;
+    font-weight:lighter;
+    letter-spacing: 0,2rem;
 }
