--- a/PI-Countries-main/client/src/Components/Formulario/Formulario.module.css
+++ b/PI-Countries-main/client/src/Components/Formulario/Formulario.module.css
@@ -2,22 +2,41 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     width: 30%;
-    border: 2px solid rgba(218, 117, 117, 0.795);
+    height: 80%;
+    border: 2px solid rgb(87, 84, 84);
     border-radius: 5px;
+    background-color: rgba(143, 182, 169, 0.733);
 }
 
 .divContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 70vh;
 }
 
 .divLabel {
     display: flex;
     flex-direction: column;
+    color: beige;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    text-decoration: none;
+    font-weight: lighter;
+    letter-spacing: 0, 2rem;
 }
 
 .inputs {
     background-color: transparent;
+}
+
+.font {
+    color: beige;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    text-decoration: none;
+    font-weight: lighter;
+    letter-spacing: 0, 2rem;
 }
